--- a/gala/namespace.yaml
+++ b/gala/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: cicd.taragala.com
+  name: cicd-gala
   labels:
-    name: cicd.taragala.com
+    name: cicd-gala
