--- a/gala/namespace.yaml
+++ b/gala/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: cicd-gala
+  name: gala-cicd
   labels:
-    name: cicd-gala
+    name: gala-cicd
