--- a/gala/cicd/gitea.yaml
+++ b/gala/cicd/gitea.yaml
@@ -1,1 +1,82 @@
-
+apiVersion: v1
+kind: Service
+metadata:
+  name: git
+  labels:
+    app: nginx
+  namespace: gala-cicd
+spec:
+  ports:
+  - port: 3000
+    name: gitea-http
+  - port: 22
+    name: gitea-ssh
+  clusterIP: None
+  selector:
+    app: gitea
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: gitea-gitea-statefulset
+  namespace: gala-cicd
+spec:
+  selector:
+    matchLabels:
+      app: gitea
+  serviceName: gitea
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: gitea
+    spec:
+      containers:
+      - name: gitea
+        image: gitea/gitea:1.10.1
+        ports:
+        - containerPort: 3000
+          name: gitea-http
+        - containerPort: 22
+          name: gitea-ssh
+        volumeMounts:
+        - name: gitea-data
+          mountPath: /data
+  volumeClaimTemplates:
+  - metadata:
+      name: gitea-data
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      storageClassName: "local-storage"
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: gitea-mariadb-statefulset
+  namespace: gala-cicd
+spec:
+  selector:
+    matchLabels:
+      app: mariadb
+  serviceName: mariadb
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: mariadb
+    spec:
+      containers:
+      - name: mariadb
+        image: mariadb:10
+        ports:
+        - containerPort: 3306
+          name: mariadb-port
+        volumeMounts:
+        - name: gitea-db
+          mountPath: /var/lib/mysql
+  volumeClaimTemplates:
+  - metadata:
+      name: gitea-db
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      storageClassName: "local-storage"
